# soft-computing-2

./: .gitignore  CMakeLists.txt  Defines.h  README.md  main.cpp
ActivationFunctions/: ActivationFunction.h  LinearFunction.cpp  LinearFunction.h  SigmoidalFunction.cpp  SigmoidalFunction.h  SineFunction.cpp  SineFunction.h
Neuron/: Neuron.cpp  Neuron.h  NeuronConfiguration.cpp  NeuronConfiguration.h
Perceptron/: Layer.cpp  Layer.h  ThreeLayerPerceptron.cpp  ThreeLayerPerceptron.h
